API Update Ingredient
